--- a/darkDolphin.css
+++ b/darkDolphin.css
@@ -6,7 +6,7 @@ body{
 	or
 	#000000
     or
-    #111111
+    #111111 / #121212;
     */
     color: #fff;
 }
@@ -189,7 +189,92 @@ h4.modal-title {
     filter: brightness(2);
 }
 
+
+/*Downloads Page*/
 pre.always-ltr{
     color: #fff;
     background-color: #000000;
+}
+
+/* good alert component background 
+background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+*/
+
+.alert-info{
+    background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+    border-width: medium;
+    color: #00b5ff;
+    border-color: #00b5ff;
+}
+
+.alert-danger{
+    background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+    border-width: medium;
+    color: #ff4040;
+    border-color: #ff4040;
+}
+
+.alert-warning{
+    background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+    border-width: medium;
+    color: #f5e79e;
+    border-color: #f5e79e;
+}
+
+
+.btn-info{
+    background-image: linear-gradient(to bottom, #0057ff 0, #4e8bff 100%);
+    border-color: #5890ff;
+    /*
+    background-image: linear-gradient(to bottom, #0057ff 0, #0c51d6 100%);
+    border-color: #1552cc;
+    */
+}
+
+.btn-info:hover, .btn-info:focus{
+    background-color: #2c6de9;
+    border-color: #467fee;
+}
+
+
+.btn-info:active:focus{
+background-color: #2759ba;
+border-color: #467fee;
+}
+
+.btn-info:active, .btn-info.active{
+    background-color: #2759ba;
+    border-color: #467fee;
+}
+
+/*Blog pages*/
+.breadcrumb{
+    background-color: #1b1b1b;
+}
+
+/* compatibility page */
+td.category>img{
+    filter: invert(1) !important;
+}
+
+.compat-list tbody tr:nth-child(2n) {
+    background-color: #0c0c0c;
+}
+
+.compat-list tbody tr:nth-child(2n+1) {
+    background-color: #2b2b2b;
+}
+
+.pagination>li>a, .pagination>li>span{
+    color: #ff7942;
+    background-color: #2b2b2b;
+}
+
+.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus{
+    border-color: #ff7942;
+    background-color: #ff7942;
+}
+
+.pagination>li>a:hover, .pagination>li>span:hover, .pagination>li>a:focus, .pagination>li>span:focus{
+    color: af471d;
 }
