--- a/darkDolphin.css
+++ b/darkDolphin.css
@@ -1,312 +1,318 @@
-body{
-    background-color: #2b2b2b;
-/*
-	outer color
-	#2b2b2b
-	or
-	#000000
-    or
-    #111111 / #121212;
-    */
-    color: #fff;
-}
-
-.jumbotron{
-background-color: #1e1e1e;   
-}
-
-.well{
-  /*
-  Inner color
-	#1e1e1e
-
-    inner color background-image gradient
-	linear-gradient(to bottom, #121212 0, #1e1e1e 100%)
-	or 
-	linear-gradient(to bottom, #000000 0, #1e1e1e 100%)
-	border-color
-	#313131
-
-  */
-
-    background-image: linear-gradient(to bottom, #000000 0, #1e1e1e 100%);
-    border-color: #313131
-
-    /*
-    background-image: linear-gradient(to bottom, #1e1e1e 0, #272727 100%);*/
-}
-
-/*
-    Carousel edit
-	add border radius of 20px (more like 15px)
-*/
-
-.carousel-inner, .carousel-control.right, .carousel-control.left{
-    border-radius: 10px;
-}
-
-/*
-    carousel gallery
-	add border radius of 5px
-	.img.fp-sshot
-*/
-.img.fp-sshot{
-    border-radius: 5px;
-}
-
-ul.tag-cloud a{
-
-    background-color: #ff8858;
-
-    /*
-    a links as well
-	background
-	#4ca0b9
-	or 557fff
-	or ea622b
-	or #ff8858
-	or 58bfff
-    */
-    
-}
-
-
-a{
-    color: #ff7942;
-}
-	
-a:hover, a:focus {
-    color: #b54e24;
-   /* color: #d27049;*/
-}
-
-button.btn{
-    background-color: #ff8858;
-	/*#0588fd
-	or
-	#ff8858*/
-}
-
-.form-control:focus{
-    border-color: #e98e66;
-    outline: 0;
-    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(233 158 102 / 60%);
-}
-
-
-/*change main hero title*/
-h1.title{
-    filter: hue-rotate(182deg);
-}
-
-
-.dropdown-menu>li>a{
-    color: #fff;
-}
-
-.dropdown-menu{
-    background-color: #000;
-    
-   /* background-color: #1e1e1e;*/
-}
-    
-.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.active>a{
-    background-image: linear-gradient(to bottom, #797979 0, #101010 100%);
-}
-
-
-/*toggle svg*/
-svg.feather{
-    stroke: #999;
-    margin-left: 10px;
-    margin-top: 13px;
-}
-
-svg.feather:hover {
-    stroke: white;
-}
-
-.btn-primary{
-    background-image: linear-gradient(to bottom, #f0975f 0, #ea622b 100%);
-    border-color: #cb5525;
-    background-color: #ea622b;
-}
-
-.btn-primary:active, .btn-primary.active {
-    background-color: #d65d2d;
-    border-color: #ffffff;
-}
-
-.btn-primary:hover, .btn-primary:focus {
-    background-color: #ea622b;
-    border-color: #ff8b5d;
-}
-
-.btn-primary:active:focus{
-    background-color: #ea622b;
-    border-color: #ff8b5d;
-}
-
-/*
-    Addition rule when in mobile hamburger mode
-    PLACE BUTTON BELOW HAMBURGER TOGGLE
-    float: right;
-    margin-right: 10px;
-*/
-    
-    
-/*Implement dark mode css media query*/
-/*
 @media (prefers-color-scheme: dark) {
-  body {
-    color: #eee;
-    background: #121212;
-  }
-
-  a {
-    color: #809fff;
-  }
-}*/
-
-
-/* Filter (dim) image brightness for better viewing
-Or apply it via media query */
-@media (prefers-color-scheme: dark) {
-  img {
-    filter: brightness(.8) contrast(1.2);
-  }
-}
-
-img {
-    filter: brightness(.95);
-  }
-
-h4.modal-title {
-    color: black;
-}
-
-.navbar-logo>img:hover {
-    filter: brightness(2);
-}
-
-
-/*Downloads Page*/
-pre.always-ltr{
-    color: #fff;
-    background-color: #000000;
-}
-
-/* good alert component background 
-background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
-*/
-
-.alert-info{
-    background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
-    border-width: medium;
-    color: #00b5ff;
-    border-color: #00b5ff;
-}
-
-.alert-danger{
-    background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
-    border-width: medium;
-    color: #ff4040;
-    border-color: #ff4040;
-}
-
-.alert-warning{
-    background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
-    border-width: medium;
-    color: #f5e79e;
-    border-color: #f5e79e;
-}
-
-
-.btn-info{
-    background-image: linear-gradient(to bottom, #0057ff 0, #4e8bff 100%);
-    border-color: #5890ff;
+    body{
+        background-color: #2b2b2b;
     /*
-    background-image: linear-gradient(to bottom, #0057ff 0, #0c51d6 100%);
-    border-color: #1552cc;
+        outer color
+        #2b2b2b
+        or
+        #000000
+        or
+        #111111 / #121212;
+        */
+        color: #fff;
+    }
+
+    .jumbotron{
+    background-color: #1e1e1e;   
+    }
+
+    .well{
+    /*
+    Inner color
+        #1e1e1e
+
+        inner color background-image gradient
+        linear-gradient(to bottom, #121212 0, #1e1e1e 100%)
+        or 
+        linear-gradient(to bottom, #000000 0, #1e1e1e 100%)
+        border-color
+        #313131
+
     */
-}
 
-.btn-info:hover, .btn-info:focus{
-    background-color: #2c6de9;
+        background-image: linear-gradient(to bottom, #000000 0, #1e1e1e 100%);
+        border-color: #313131
+
+        /*
+        background-image: linear-gradient(to bottom, #1e1e1e 0, #272727 100%);*/
+    }
+
+    /*
+        Carousel edit
+        add border radius of 20px (more like 15px)
+    */
+
+    .carousel-inner, .carousel-control.right, .carousel-control.left{
+        border-radius: 10px;
+    }
+
+    /*
+        carousel gallery
+        add border radius of 5px
+        .img.fp-sshot
+    */
+    .img.fp-sshot{
+        border-radius: 5px;
+    }
+
+    ul.tag-cloud a{
+
+        background-color: #ff8858;
+
+        /*
+        a links as well
+        background
+        #4ca0b9
+        or 557fff
+        or ea622b
+        or #ff8858
+        or 58bfff
+        */
+        
+    }
+
+
+    a{
+        color: #ff7942;
+    }
+        
+    a:hover, a:focus {
+        color: #b54e24;
+    /* color: #d27049;*/
+    }
+
+    button.btn{
+        background-color: #ff8858;
+        /*#0588fd
+        or
+        #ff8858*/
+    }
+
+    .form-control:focus{
+        border-color: #e98e66;
+        outline: 0;
+        box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(233 158 102 / 60%);
+    }
+    .form-control{
+        background-color: #000;
+        color: #fff;
+        border: 1px solid #616161;
+    }
+
+
+    /*change main hero title*/
+    h1.title{
+        filter: hue-rotate(182deg);
+    }
+
+
+    .dropdown-menu>li>a{
+        color: #fff;
+    }
+
+    .dropdown-menu{
+        background-color: #000;
+        
+    /* background-color: #1e1e1e;*/
+    }
+        
+    .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.active>a{
+        background-image: linear-gradient(to bottom, #797979 0, #101010 100%);
+    }
+
+
+    /*toggle svg*/
+    svg.feather{
+        stroke: #999;
+        margin-left: 10px;
+        margin-top: 13px;
+    }
+
+    svg.feather:hover {
+        stroke: white;
+    }
+
+    .btn-primary{
+        background-image: linear-gradient(to bottom, #f0975f 0, #ea622b 100%);
+        border-color: #cb5525;
+        background-color: #ea622b;
+    }
+
+    .btn-primary:active, .btn-primary.active {
+        background-color: #d65d2d;
+        border-color: #ffffff;
+    }
+
+    .btn-primary:hover, .btn-primary:focus {
+        background-color: #ea622b;
+        border-color: #ff8b5d;
+    }
+
+    .btn-primary:active:focus{
+        background-color: #ea622b;
+        border-color: #ff8b5d;
+    }
+
+    /*
+        Addition rule when in mobile hamburger mode
+        PLACE BUTTON BELOW HAMBURGER TOGGLE
+        float: right;
+        margin-right: 10px;
+    */
+        
+        
+    /*Implement dark mode css media query*/
+    /*
+    @media (prefers-color-scheme: dark) {
+    body {
+        color: #eee;
+        background: #121212;
+    }
+
+    a {
+        color: #809fff;
+    }
+    }*/
+
+
+    /* Filter (dim) image brightness for better viewing
+    Or apply it via media query */
+    img {
+        filter: brightness(.95);
+    }
+
+    h4.modal-title {
+        color: black;
+    }
+
+    .navbar-logo>img:hover {
+        filter: brightness(2);
+    }
+
+
+    /*Downloads Page*/
+    pre.always-ltr{
+        color: #fff;
+        background-color: #000000;
+    }
+
+    .alert-info{
+        background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+        border-width: medium;
+        color: #00b5ff;
+        border-color: #00b5ff;
+    }
+
+    .alert-danger{
+        background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+        border-width: medium;
+        color: #ff4040;
+        border-color: #ff4040;
+    }
+
+    .alert-warning{
+        background-image: linear-gradient(to bottom, #353434 0, #1f1f1f 100%);
+        border-width: medium;
+        color: #f5e79e;
+        border-color: #f5e79e;
+    }
+
+
+    .btn-info{
+        /*
+        background-image: linear-gradient(to bottom, #0057ff 0, #4e8bff 100%);
+        border-color: #5890ff;
+        */
+
+        background-image: linear-gradient(to bottom, #5f8af0 0, #2b64ea 100%);
+        border-color: #2579cb;
+        background-color: #2b64ea;
+        /*
+        background-image: linear-gradient(to bottom, #0057ff 0, #0c51d6 100%);
+        border-color: #1552cc;
+        */
+    }
+
+    .btn-info:hover, .btn-info:focus{
+        background-color: #2c6de9;
+        border-color: #467fee;
+    }
+
+
+    .btn-info:active:focus{
+    background-color: #2b64ea;
     border-color: #467fee;
-}
+    }
+
+    .btn-info:active, .btn-info.active{
+        background-color: #2b64ea;
+        border-color: #467fee;
+    }
 
 
-.btn-info:active:focus{
-background-color: #2759ba;
-border-color: #467fee;
-}
+    /*Blog pages*/
+    .breadcrumb{
+        background-color: #1b1b1b;
+    }
 
-.btn-info:active, .btn-info.active{
-    background-color: #2759ba;
-    border-color: #467fee;
-}
 
-/*Blog pages*/
-.breadcrumb{
-    background-color: #1b1b1b;
-}
+    /* compatibility page */
+    td.category>img{
+        filter: invert(1) !important;
+    }
 
-/* compatibility page */
-td.category>img{
-    filter: invert(1) !important;
-}
+    .compat-list tbody tr:nth-child(2n) {
+        background-color: #0c0c0c;
+    }
 
-.compat-list tbody tr:nth-child(2n) {
-    background-color: #0c0c0c;
-}
+    .compat-list tbody tr:nth-child(2n+1) {
+        background-color: #2b2b2b;
+    }
 
-.compat-list tbody tr:nth-child(2n+1) {
-    background-color: #2b2b2b;
-}
+    .pagination>li>a, .pagination>li>span{
+        color: #ff7942;
+        background-color: #2b2b2b;
+    }
 
-.pagination>li>a, .pagination>li>span{
-    color: #ff7942;
-    background-color: #2b2b2b;
-}
+    .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus{
+        border-color: #ff7942;
+        background-color: #ff7942;
+    }
 
-.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus{
-    border-color: #ff7942;
-    background-color: #ff7942;
-}
+    .pagination>li>a:hover, .pagination>li>span:hover, .pagination>li>a:focus, .pagination>li>span:focus{
+        color: af471d;
+    }
 
-.pagination>li>a:hover, .pagination>li>span:hover, .pagination>li>a:focus, .pagination>li>span:focus{
-    color: af471d;
-}
 
-/* guide pages */
-.toc{
-    background-color: #1e1e1e;
-}
+    /* guide pages */
+    .toc{
+        background-color: #1e1e1e;
+    }
 
-div.thumbinner{
-    background: #1e1e1e;
-}
+    div.thumbinner{
+        background: #1e1e1e;
+    }
 
-kbd{
-    color: #000;
-    background-color: #fcfcfc;
-}
+    kbd{
+        color: #000;
+        background-color: #fcfcfc;
+    }
 
-code{
-    color: #ff0041;
-    background-color: #3c0000;
-}
+    code{
+        color: #ff0041;
+        background-color: #3c0000;
+    }
 
-pre{
-    color: #ffffff;
-    background-color: #000000;
-}
+    pre{
+        color: #ffffff;
+        background-color: #000000;
+    }
 
-table.wikitable, table.prettytable{
-    background-color: #2b2b2b;
-}
+    table.wikitable, table.prettytable{
+        background-color: #2b2b2b;
+    }
 
-table.wikitable > tr > th, table.wikitable > * > tr > th{
-    background-color: #1e1e1e;
-}
+    table.wikitable > tr > th, table.wikitable > * > tr > th{
+        background-color: #1e1e1e;
+    }
+} /* End of main media query*/
