--- a/darkDolphin.css
+++ b/darkDolphin.css
@@ -57,59 +57,16 @@
     .img.fp-sshot{
         border-radius: 5px;
     }
-
-    ul.tag-cloud a{
-
-        background-color: #ff8858;
-
-        /*
-        a links as well
-        background
-        #4ca0b9
-        or 557fff
-        or ea622b
-        or #ff8858
-        or 58bfff
-        */
-        
-    }
-
-
-    a{
-        color: #ff7942;
-    }
-        
-    a:hover, a:focus {
-        color: #b54e24;
-    /* color: #d27049;*/
-    }
-
-    button.btn{
-        background-color: #ff8858;
-        /*#0588fd
-        or
-        #ff8858*/
-    }
-
-    .form-control:focus{
-        border-color: #e98e66;
-        outline: 0;
-        box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(233 158 102 / 60%);
-        -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgb(233 158 102 / 60%);
-    }
+    
     .form-control{
         background-color: #000;
         color: #fff;
         border: 1px solid #616161;
     }
 
-
-    /*change main hero title*/
-    h1.title{
-        filter: hue-rotate(182deg);
+    .input-group-btn>.btn{
+        background-color: #66afe9;
     }
-
-
     .dropdown-menu>li>a{
         color: #fff;
     }
@@ -127,29 +84,7 @@
         background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #797979), to(#101010));
     }
 
-    .btn-primary{
-        background-image: linear-gradient(to bottom, #f0975f 0, #ea622b 100%);
-        background-image: -webkit-linear-gradient(top, #f0975f 0, #ea622b 100%);
-        background-image: -o-linear-gradient(top, #f0975f 0, #ea622b 100%);
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f0975f), to(#ea622b));
-        border-color: #cb5525;
-        background-color: #ea622b;
-    }
-
-    .btn-primary:active, .btn-primary.active {
-        background-color: #d65d2d;
-        border-color: #ffffff;
-    }
-
-    .btn-primary:hover, .btn-primary:focus {
-        background-color: #ea622b;
-        border-color: #ff8b5d;
-    }
-
-    .btn-primary:active:focus{
-        background-color: #ea622b;
-        border-color: #ff8b5d;
-    }
+ 
 
     /*
         Addition rule when in mobile hamburger mode
@@ -280,14 +215,9 @@
     }
 
     .pagination>li>a, .pagination>li>span{
-        color: #ff7942;
         background-color: #2b2b2b;
     }
 
-    .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus{
-        border-color: #ff7942;
-        background-color: #ff7942;
-    }
 
     .pagination>li>a:hover, .pagination>li>span:hover, .pagination>li>a:focus, .pagination>li>span:focus{
         color: af471d;
