--- a/oreoDolphin.css
+++ b/oreoDolphin.css
@@ -10,3 +10,7 @@
         svg.feather:hover {
             stroke: white;
         }
+
+        button.navbar-toggle{
+            margin-left: 10px;
+        }
